refactor: add more tests and refactor the connector