@@ -14,15 +14,12 @@
 package io.trino.plugin.lance;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.inject.Inject;
 import io.airlift.json.JsonCodec;
 import io.airlift.log.Logger;
 import io.airlift.slice.Slice;
 import io.trino.plugin.lance.internal.LancePageToArrowConverter;
-import io.trino.plugin.lance.internal.LanceReader;
-import io.trino.plugin.lance.internal.LanceWriter;
 import io.trino.spi.TrinoException;
 import io.trino.spi.connector.ColumnHandle;
 import io.trino.spi.connector.ColumnMetadata;
@@ -45,21 +42,50 @@ import io.trino.spi.connector.SchemaTableName;
 import io.trino.spi.connector.SchemaTablePrefix;
 import io.trino.spi.connector.TableNotFoundException;
 import io.trino.spi.expression.ConnectorExpression;
+import io.trino.spi.security.TrinoPrincipal;
 import io.trino.spi.statistics.ComputedStatistics;
 import org.apache.arrow.vector.types.pojo.Schema;
+import org.lance.Dataset;
+import org.lance.FragmentMetadata;
+import org.lance.FragmentOperation;
+import org.lance.ReadOptions;
+import org.lance.WriteParams;
+import org.lance.namespace.LanceNamespace;
+import org.lance.namespace.model.CreateEmptyTableRequest;
+import org.lance.namespace.model.CreateEmptyTableResponse;
+import org.lance.namespace.model.CreateNamespaceRequest;
+import org.lance.namespace.model.DescribeNamespaceRequest;
+import org.lance.namespace.model.DescribeNamespaceResponse;
+import org.lance.namespace.model.DescribeTableRequest;
+import org.lance.namespace.model.DescribeTableResponse;
+import org.lance.namespace.model.DropNamespaceRequest;
+import org.lance.namespace.model.DropTableRequest;
+import org.lance.namespace.model.ListNamespacesRequest;
+import org.lance.namespace.model.ListNamespacesResponse;
+import org.lance.namespace.model.ListTablesRequest;
+import org.lance.namespace.model.ListTablesResponse;
+import org.lance.namespace.model.NamespaceExistsRequest;
 
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.ObjectInputStream;
+import java.io.ObjectOutputStream;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import static com.google.common.collect.ImmutableList.toImmutableList;
 import static io.trino.spi.StandardErrorCode.ALREADY_EXISTS;
 import static io.trino.spi.StandardErrorCode.GENERIC_INTERNAL_ERROR;
-import static io.trino.spi.StandardErrorCode.NOT_FOUND;
+import static io.trino.spi.StandardErrorCode.NOT_SUPPORTED;
 import static java.util.Objects.requireNonNull;
 
 public class LanceMetadata
@@ -67,41 +93,121 @@ public class LanceMetadata
 {
     private static final Logger log = Logger.get(LanceMetadata.class);
 
-    private final LanceReader lanceReader;
-    private final LanceWriter lanceWriter;
+    private final LanceNamespaceHolder namespaceHolder;
     private final LanceConfig lanceConfig;
     private final JsonCodec<LanceCommitTaskData> commitTaskDataCodec;
 
     @Inject
     public LanceMetadata(
-            LanceReader lanceReader,
-            LanceWriter lanceWriter,
+            LanceNamespaceHolder namespaceHolder,
             LanceConfig lanceConfig,
             JsonCodec<LanceCommitTaskData> commitTaskDataCodec)
     {
-        this.lanceReader = requireNonNull(lanceReader, "lanceReader is null");
-        this.lanceWriter = requireNonNull(lanceWriter, "lanceWriter is null");
+        this.namespaceHolder = requireNonNull(namespaceHolder, "namespaceHolder is null");
         this.lanceConfig = requireNonNull(lanceConfig, "lanceConfig is null");
         this.commitTaskDataCodec = requireNonNull(commitTaskDataCodec, "commitTaskDataCodec is null");
     }
 
+    // ===== Schema/Namespace Operations =====
+
     @Override
     public List<String> listSchemaNames(ConnectorSession session)
     {
-        return ImmutableList.of(LanceReader.SCHEMA);
+        if (namespaceHolder.isSingleLevelNs()) {
+            return List.of(LanceNamespaceHolder.DEFAULT_SCHEMA);
+        }
+
+        ListNamespacesRequest request = new ListNamespacesRequest();
+        if (namespaceHolder.getParentPrefix().isPresent()) {
+            request.setId(namespaceHolder.getParentPrefix().get());
+        }
+        ListNamespacesResponse response = getNamespace().listNamespaces(request);
+        Set<String> namespaces = response.getNamespaces();
+        if (namespaces == null || namespaces.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return namespaces.stream().collect(toImmutableList());
     }
+
+    @Override
+    public void createSchema(ConnectorSession session, String schemaName, Map<String, Object> properties, TrinoPrincipal owner)
+    {
+        if (namespaceHolder.isSingleLevelNs()) {
+            throw new TrinoException(NOT_SUPPORTED, "This connector does not support creating schemas");
+        }
+
+        List<String> namespaceId = namespaceHolder.trinoSchemaToLanceNamespace(schemaName);
+        log.debug("createSchema: creating namespace with id=%s for schema '%s'", namespaceId, schemaName);
+
+        CreateNamespaceRequest request = new CreateNamespaceRequest();
+        request.setId(namespaceId);
+
+        if (properties != null && !properties.isEmpty()) {
+            Map<String, String> propsMap = new HashMap<>();
+            for (Map.Entry<String, Object> entry : properties.entrySet()) {
+                if (entry.getValue() != null) {
+                    propsMap.put(entry.getKey(), entry.getValue().toString());
+                }
+            }
+            request.setProperties(propsMap);
+        }
+
+        getNamespace().createNamespace(request);
+    }
+
+    @Override
+    public void dropSchema(ConnectorSession session, String schemaName, boolean cascade)
+    {
+        if (namespaceHolder.isSingleLevelNs()) {
+            throw new TrinoException(NOT_SUPPORTED, "This connector does not support dropping schemas");
+        }
+
+        if (cascade) {
+            throw new TrinoException(NOT_SUPPORTED, "This connector does not support dropping schemas with CASCADE option");
+        }
+
+        List<String> namespaceId = namespaceHolder.trinoSchemaToLanceNamespace(schemaName);
+
+        DropNamespaceRequest request = new DropNamespaceRequest();
+        request.setId(namespaceId);
+        request.setBehavior(DropNamespaceRequest.BehaviorEnum.RESTRICT);
+        getNamespace().dropNamespace(request);
+    }
+
+    @Override
+    public Map<String, Object> getSchemaProperties(ConnectorSession session, String schemaName)
+    {
+        if (namespaceHolder.isSingleLevelNs() && LanceNamespaceHolder.DEFAULT_SCHEMA.equals(schemaName)) {
+            return Collections.emptyMap();
+        }
+
+        DescribeNamespaceRequest request = new DescribeNamespaceRequest();
+        request.setId(namespaceHolder.trinoSchemaToLanceNamespace(schemaName));
+        DescribeNamespaceResponse response = getNamespace().describeNamespace(request);
+
+        Map<String, String> props = response.getProperties();
+        if (props == null || props.isEmpty()) {
+            return Collections.emptyMap();
+        }
+
+        Map<String, Object> result = new HashMap<>();
+        result.putAll(props);
+        return result;
+    }
+
+    // ===== Table Operations =====
 
     @Override
     public LanceTableHandle getTableHandle(ConnectorSession session, SchemaTableName name,
             Optional<ConnectorTableVersion> startVersion, Optional<ConnectorTableVersion> endVersion)
     {
-        String tablePath = lanceReader.getTablePath(session, name);
+        String tablePath = getTablePath(session, name);
         if (tablePath != null) {
-            return new LanceTableHandle(name.getSchemaName(), name.getTableName(), tablePath);
+            List<String> tableId = namespaceHolder.getTableId(name.getSchemaName(), name.getTableName());
+            Map<String, String> storageOptions = getStorageOptionsForTable(tableId);
+            return new LanceTableHandle(name.getSchemaName(), name.getTableName(), tablePath, tableId, storageOptions);
         }
-        else {
-            return null;
-        }
+        return null;
     }
 
     @Override
@@ -109,12 +215,15 @@ public class LanceMetadata
     {
         LanceTableHandle lanceTableHandle = (LanceTableHandle) table;
         try {
-            List<ColumnMetadata> columnsMetadata = lanceReader.getColumnsMetadata(((LanceTableHandle) table).getTableName());
+            Map<String, String> storageOptions = getEffectiveStorageOptions(lanceTableHandle);
+            List<ColumnMetadata> columnsMetadata = LanceDatasetCache.getColumnMetadata(
+                    lanceTableHandle.getTablePath(), storageOptions);
             SchemaTableName schemaTableName =
                     new SchemaTableName(lanceTableHandle.getSchemaName(), lanceTableHandle.getTableName());
             return new ConnectorTableMetadata(schemaTableName, columnsMetadata);
         }
         catch (Exception e) {
+            log.warn(e, "Failed to get table metadata for %s", lanceTableHandle.getTableName());
             return null;
         }
     }
@@ -122,7 +231,24 @@ public class LanceMetadata
     @Override
     public List<SchemaTableName> listTables(ConnectorSession session, Optional<String> schemaNameOrNull)
     {
-        return lanceReader.listTables(session, schemaNameOrNull.orElse(LanceReader.SCHEMA));
+        String schema = schemaNameOrNull.orElse(LanceNamespaceHolder.DEFAULT_SCHEMA);
+
+        if (!schemaExists(schema)) {
+            return Collections.emptyList();
+        }
+
+        List<String> namespaceId = namespaceHolder.trinoSchemaToLanceNamespace(schema);
+        ListTablesRequest request = new ListTablesRequest();
+        request.setId(namespaceId);
+
+        ListTablesResponse response = getNamespace().listTables(request);
+        Set<String> tables = response.getTables();
+        if (tables == null || tables.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return tables.stream()
+                .map(tableName -> new SchemaTableName(schema, tableName))
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -130,7 +256,8 @@ public class LanceMetadata
     {
         LanceTableHandle lanceTableHandle = (LanceTableHandle) tableHandle;
         try {
-            return lanceReader.getColumnHandle(lanceTableHandle.getTableName());
+            Map<String, String> storageOptions = getEffectiveStorageOptions(lanceTableHandle);
+            return LanceDatasetCache.getColumnHandles(lanceTableHandle.getTablePath(), storageOptions);
         }
         catch (Exception e) {
             throw new TableNotFoundException(new SchemaTableName(lanceTableHandle.getSchemaName(), lanceTableHandle.getTableName()));
@@ -143,12 +270,20 @@ public class LanceMetadata
     {
         requireNonNull(prefix, "prefix is null");
         ImmutableMap.Builder<SchemaTableName, List<ColumnMetadata>> columns = ImmutableMap.builder();
-        for (SchemaTableName tableName : lanceReader.listTables(session, prefix.toString())) {
-            ConnectorTableMetadata tableMetadata =
-                    new ConnectorTableMetadata(tableName, lanceReader.getColumnsMetadata(tableName.getTableName()));
-            // table can disappear during listing operation
-            if (tableMetadata != null) {
-                columns.put(tableName, tableMetadata.getColumns());
+
+        String schemaName = prefix.getSchema().orElse(LanceNamespaceHolder.DEFAULT_SCHEMA);
+        for (SchemaTableName tableName : listTables(session, Optional.of(schemaName))) {
+            try {
+                String tablePath = getTablePath(session, tableName);
+                if (tablePath != null) {
+                    List<String> tableId = namespaceHolder.getTableId(tableName.getSchemaName(), tableName.getTableName());
+                    Map<String, String> storageOptions = getStorageOptionsForTable(tableId);
+                    List<ColumnMetadata> columnsMetadata = LanceDatasetCache.getColumnMetadata(tablePath, storageOptions);
+                    columns.put(tableName, columnsMetadata);
+                }
+            }
+            catch (Exception e) {
+                // Table can disappear during listing operation, skip it
             }
         }
         return columns.buildOrThrow();
@@ -165,7 +300,6 @@ public class LanceMetadata
     public Optional<ProjectionApplicationResult<ConnectorTableHandle>> applyProjection(ConnectorSession session,
             ConnectorTableHandle handle, List<ConnectorExpression> projections, Map<String, ColumnHandle> assignments)
     {
-        // TODO: support projection pushdown
         return Optional.empty();
     }
 
@@ -173,7 +307,6 @@ public class LanceMetadata
     public Optional<LimitApplicationResult<ConnectorTableHandle>> applyLimit(ConnectorSession session,
             ConnectorTableHandle table, long limit)
     {
-        // TODO: support limit pushdown
         return Optional.empty();
     }
 
@@ -181,7 +314,6 @@ public class LanceMetadata
     public Optional<ConstraintApplicationResult<ConnectorTableHandle>> applyFilter(ConnectorSession session,
             ConnectorTableHandle table, Constraint constraint)
     {
-        // TODO: support filter pushdown
         return Optional.empty();
     }
 
@@ -191,15 +323,16 @@ public class LanceMetadata
     public void dropTable(ConnectorSession session, ConnectorTableHandle tableHandle)
     {
         LanceTableHandle lanceTableHandle = (LanceTableHandle) tableHandle;
+        List<String> tableId = lanceTableHandle.getTableId();
         String tablePath = lanceTableHandle.getTablePath();
 
         log.debug("dropTable: table=%s, path=%s", lanceTableHandle.getTableName(), tablePath);
 
-        // Delete the dataset files
-        lanceWriter.dropDataset(tablePath);
+        DropTableRequest dropRequest = new DropTableRequest()
+                .id(tableId);
+        getNamespace().dropTable(dropRequest);
 
-        // Invalidate cache
-        lanceReader.invalidateCache(tablePath);
+        LanceDatasetCache.invalidate(tablePath);
     }
 
     // ===== CREATE TABLE =====
@@ -208,10 +341,14 @@ public class LanceMetadata
     public void createTable(ConnectorSession session, ConnectorTableMetadata tableMetadata, SaveMode saveMode)
     {
         SchemaTableName tableName = tableMetadata.getTable();
-        String tablePath = lanceReader.getTablePathForNewTable(tableName.getTableName());
 
-        // Check if table already exists
-        String existingPath = lanceReader.getTablePath(session, tableName);
+        if (!schemaExists(tableName.getSchemaName())) {
+            throw new TrinoException(NOT_SUPPORTED, "Schema " + tableName.getSchemaName() + " not found");
+        }
+
+        List<String> tableId = namespaceHolder.getTableId(tableName.getSchemaName(), tableName.getTableName());
+        String existingPath = getTablePath(session, tableName);
+
         if (existingPath != null) {
             if (saveMode == SaveMode.FAIL) {
                 throw new TrinoException(ALREADY_EXISTS, "Table already exists: " + tableName);
@@ -219,12 +356,26 @@ public class LanceMetadata
             else if (saveMode == SaveMode.IGNORE) {
                 return;
             }
-            // For REPLACE, we continue and create new table
+            // For REPLACE, overwrite with empty dataset
+            Map<String, String> storageOptions = getStorageOptionsForTable(tableId);
+            Schema arrowSchema = LancePageToArrowConverter.toArrowSchema(tableMetadata.getColumns());
+            commitOverwrite(existingPath, List.of(), arrowSchema, storageOptions);
+            LanceDatasetCache.invalidate(existingPath);
+            log.debug("createTable: replaced table %s at %s", tableName, existingPath);
+            return;
         }
 
-        // Convert to Arrow schema and create empty dataset
+        // Create new table via namespace API
+        CreateEmptyTableRequest createRequest = new CreateEmptyTableRequest()
+                .id(tableId);
+        CreateEmptyTableResponse createResponse = getNamespace().createEmptyTable(createRequest);
+        String tablePath = createResponse.getLocation();
+
+        Map<String, String> storageOptions = getStorageOptionsForTable(tableId);
         Schema arrowSchema = LancePageToArrowConverter.toArrowSchema(tableMetadata.getColumns());
-        lanceWriter.createEmptyDataset(tablePath, arrowSchema, lanceWriter.getDefaultWriteParams());
+
+        WriteParams params = buildWriteParams(storageOptions);
+        createEmptyDataset(tablePath, arrowSchema, params);
 
         log.debug("createTable: created empty table %s at %s", tableName, tablePath);
     }
@@ -238,38 +389,48 @@ public class LanceMetadata
             boolean replace)
     {
         SchemaTableName tableName = tableMetadata.getTable();
-        String tablePath = lanceReader.getTablePathForNewTable(tableName.getTableName());
 
-        // Check if table already exists
-        String existingPath = lanceReader.getTablePath(session, tableName);
-        if (existingPath != null) {
+        if (!schemaExists(tableName.getSchemaName())) {
+            throw new TrinoException(NOT_SUPPORTED, "Schema " + tableName.getSchemaName() + " not found");
+        }
+
+        List<String> tableId = namespaceHolder.getTableId(tableName.getSchemaName(), tableName.getTableName());
+        String existingPath = getTablePath(session, tableName);
+        String tablePath;
+        boolean tableExisted = existingPath != null;
+
+        if (tableExisted) {
             if (!replace) {
                 throw new TrinoException(ALREADY_EXISTS, "Table already exists: " + tableName);
             }
-            // Drop existing table for replace
-            log.debug("beginCreateTable: dropping existing table for replace: %s", existingPath);
-            lanceWriter.dropDataset(existingPath);
-            lanceReader.invalidateCache(existingPath);
+            log.debug("beginCreateTable: replacing existing table at: %s", existingPath);
+            tablePath = existingPath;
+        }
+        else {
+            CreateEmptyTableRequest createRequest = new CreateEmptyTableRequest()
+                    .id(tableId);
+            CreateEmptyTableResponse createResponse = getNamespace().createEmptyTable(createRequest);
+            tablePath = createResponse.getLocation();
         }
 
-        // Convert columns to LanceColumnHandle
         List<LanceColumnHandle> columns = tableMetadata.getColumns().stream()
                 .map(col -> new LanceColumnHandle(col.getName(), col.getType(), col.isNullable()))
                 .collect(toImmutableList());
 
-        // Convert to Arrow schema
         Schema arrowSchema = LancePageToArrowConverter.toArrowSchema(tableMetadata.getColumns());
         String schemaJson = arrowSchema.toJson();
 
-        log.debug("beginCreateTable: table=%s, path=%s, replace=%s", tableName, tablePath, replace);
+        log.debug("beginCreateTable: table=%s, path=%s, replace=%s, tableExisted=%s", tableName, tablePath, replace, tableExisted);
 
         return new LanceWritableTableHandle(
                 tableName,
                 tablePath,
                 schemaJson,
                 columns,
-                true,  // forCreateTable
-                replace);
+                tableId,
+                true,
+                replace,
+                tableExisted);
     }
 
     @Override
@@ -288,32 +449,33 @@ public class LanceMetadata
             throw new TrinoException(GENERIC_INTERNAL_ERROR, "Failed to parse Arrow schema", e);
         }
 
-        log.debug("finishCreateTable: table=%s, fragments=%d", handle.tableName(), fragments.size());
+        log.debug("finishCreateTable: table=%s, fragments=%d, replace=%s, tableExisted=%s",
+                handle.tableName(), fragments.size(), handle.replace(), handle.tableExisted());
 
-        if (fragments.isEmpty()) {
-            // Create empty dataset
-            lanceWriter.createEmptyDataset(handle.tablePath(), arrowSchema, lanceWriter.getDefaultWriteParams());
+        Map<String, String> storageOptions = getStorageOptionsForTable(handle.tableId());
+
+        if (handle.tableExisted()) {
+            if (fragments.isEmpty()) {
+                commitOverwrite(handle.tablePath(), List.of(), arrowSchema, storageOptions);
+            }
+            else {
+                List<String> allFragmentsJson = collectFragmentsFromSlices(fragments);
+                commitOverwrite(handle.tablePath(), allFragmentsJson, arrowSchema, storageOptions);
+            }
         }
         else {
-            // Deserialize all fragments and commit
-            List<String> allFragmentsJson = new ArrayList<>();
-            for (Slice slice : fragments) {
-                LanceCommitTaskData commitData = commitTaskDataCodec.fromJson(slice.getBytes());
-                allFragmentsJson.addAll(commitData.getFragmentsJson());
+            if (fragments.isEmpty()) {
+                WriteParams params = buildWriteParams(storageOptions);
+                createEmptyDataset(handle.tablePath(), arrowSchema, params);
             }
-
-            // Create dataset with fragments
-            lanceWriter.createDatasetWithFragments(
-                    handle.tablePath(),
-                    allFragmentsJson,
-                    arrowSchema,
-                    lanceWriter.getDefaultWriteParams(),
-                    new HashMap<>());
+            else {
+                List<String> allFragmentsJson = collectFragmentsFromSlices(fragments);
+                WriteParams params = buildWriteParams(storageOptions);
+                createDatasetWithFragments(handle.tablePath(), allFragmentsJson, arrowSchema, params, storageOptions);
+            }
         }
 
-        // Invalidate cache after write
-        lanceReader.invalidateCache(handle.tablePath());
-
+        LanceDatasetCache.invalidate(handle.tablePath());
         return Optional.empty();
     }
 
@@ -329,19 +491,15 @@ public class LanceMetadata
         LanceTableHandle table = (LanceTableHandle) tableHandle;
         SchemaTableName tableName = new SchemaTableName(table.getSchemaName(), table.getTableName());
 
-        // Get existing table path
-        String tablePath = lanceReader.getTablePath(session, tableName);
-        if (tablePath == null) {
-            throw new TrinoException(NOT_FOUND, "Table not found: " + tableName);
-        }
+        String tablePath = table.getTablePath();
+        List<String> tableId = table.getTableId();
 
-        // Convert columns to LanceColumnHandle
         List<LanceColumnHandle> lanceColumns = columns.stream()
                 .map(LanceColumnHandle.class::cast)
                 .collect(toImmutableList());
 
-        // Get Arrow schema from existing table
-        Schema arrowSchema = lanceReader.getArrowSchema(tablePath);
+        Map<String, String> storageOptions = getStorageOptionsForTable(tableId);
+        Schema arrowSchema = LanceDatasetCache.getSchema(tablePath, storageOptions);
         String schemaJson = arrowSchema.toJson();
 
         log.debug("beginInsert: table=%s, path=%s, columns=%d", tableName, tablePath, columns.size());
@@ -351,8 +509,10 @@ public class LanceMetadata
                 tablePath,
                 schemaJson,
                 lanceColumns,
-                false, // forCreateTable
-                false); // replace
+                tableId,
+                false,
+                false,
+                true);
     }
 
     @Override
@@ -368,24 +528,242 @@ public class LanceMetadata
         log.debug("finishInsert: table=%s, fragments=%d", handle.tableName(), fragments.size());
 
         if (fragments.isEmpty()) {
-            // No data to insert
             return Optional.empty();
         }
 
-        // Deserialize all fragments
+        List<String> allFragmentsJson = collectFragmentsFromSlices(fragments);
+        Map<String, String> storageOptions = getStorageOptionsForTable(handle.tableId());
+        commitAppend(handle.tablePath(), allFragmentsJson, storageOptions);
+
+        LanceDatasetCache.invalidate(handle.tablePath());
+        return Optional.empty();
+    }
+
+    // ===== Helper Methods =====
+
+    private LanceNamespace getNamespace()
+    {
+        return namespaceHolder.getNamespace();
+    }
+
+    private boolean schemaExists(String schema)
+    {
+        if (namespaceHolder.isSingleLevelNs() && LanceNamespaceHolder.DEFAULT_SCHEMA.equals(schema)) {
+            return true;
+        }
+        if (namespaceHolder.isSingleLevelNs()) {
+            return false;
+        }
+
+        try {
+            NamespaceExistsRequest request = new NamespaceExistsRequest();
+            request.setId(namespaceHolder.trinoSchemaToLanceNamespace(schema));
+            getNamespace().namespaceExists(request);
+            return true;
+        }
+        catch (Exception e) {
+            return false;
+        }
+    }
+
+    private String getTablePath(ConnectorSession session, SchemaTableName schemaTableName)
+    {
+        if (namespaceHolder.isSingleLevelNs() && !LanceNamespaceHolder.DEFAULT_SCHEMA.equals(schemaTableName.getSchemaName())) {
+            return null;
+        }
+
+        try {
+            List<String> tableId = namespaceHolder.getTableId(schemaTableName.getSchemaName(), schemaTableName.getTableName());
+            DescribeTableRequest request = new DescribeTableRequest()
+                    .id(tableId)
+                    .withTableUri(true);
+            DescribeTableResponse response = getNamespace().describeTable(request);
+            String tableUri = response.getTableUri();
+            if (tableUri != null && !tableUri.isEmpty()) {
+                return tableUri;
+            }
+            return response.getLocation();
+        }
+        catch (Exception e) {
+            log.debug("Failed to describe table %s: %s", schemaTableName, e.getMessage());
+            return null;
+        }
+    }
+
+    private Map<String, String> getStorageOptionsForTable(List<String> tableId)
+    {
+        try {
+            DescribeTableRequest request = new DescribeTableRequest().id(tableId);
+            DescribeTableResponse response = getNamespace().describeTable(request);
+            Map<String, String> storageOptions = response.getStorageOptions();
+            if (storageOptions != null && !storageOptions.isEmpty()) {
+                return storageOptions;
+            }
+        }
+        catch (Exception e) {
+            log.debug("Failed to get storage options from describeTable for %s: %s", tableId, e.getMessage());
+        }
+
+        Map<String, String> nsOptions = namespaceHolder.getNamespaceStorageOptions();
+        if (!nsOptions.isEmpty()) {
+            return nsOptions;
+        }
+
+        return new HashMap<>();
+    }
+
+    /**
+     * Get effective storage options from the table handle, refreshing if expired.
+     * This avoids repeated calls to getStorageOptionsForTable when the handle
+     * already contains valid storage options.
+     */
+    private Map<String, String> getEffectiveStorageOptions(LanceTableHandle handle)
+    {
+        // If handle has storage options and they're not expired, use them directly
+        if (!handle.getStorageOptions().isEmpty() && !handle.isStorageOptionsExpired()) {
+            return handle.getStorageOptions();
+        }
+        // Otherwise, refresh from the namespace
+        return getStorageOptionsForTable(handle.getTableId());
+    }
+
+    private List<String> collectFragmentsFromSlices(Collection<Slice> fragments)
+    {
         List<String> allFragmentsJson = new ArrayList<>();
         for (Slice slice : fragments) {
             LanceCommitTaskData commitData = commitTaskDataCodec.fromJson(slice.getBytes());
             allFragmentsJson.addAll(commitData.getFragmentsJson());
         }
+        return allFragmentsJson;
+    }
 
-        // Commit fragments (INSERT is always append mode)
-        lanceWriter.commitAppend(handle.tablePath(), allFragmentsJson, new HashMap<>());
+    // ===== Write Operations (formerly in LanceWriter) =====
 
-        // Invalidate cache after write
-        lanceReader.invalidateCache(handle.tablePath());
+    private WriteParams buildWriteParams(Map<String, String> storageOptions)
+    {
+        WriteParams.Builder builder = new WriteParams.Builder();
+        if (storageOptions != null && !storageOptions.isEmpty()) {
+            builder.withStorageOptions(storageOptions);
+        }
+        return builder.build();
+    }
 
-        return Optional.empty();
+    private void createEmptyDataset(String datasetUri, Schema schema, WriteParams params)
+    {
+        log.debug("Creating empty dataset at: %s", datasetUri);
+        Dataset.create(LanceNamespaceHolder.getAllocator(), datasetUri, schema, params).close();
+    }
+
+    private void commitAppend(String datasetUri, List<String> serializedFragments, Map<String, String> storageOptions)
+    {
+        log.debug("Committing %d fragments to dataset: %s (append)", serializedFragments.size(), datasetUri);
+        List<FragmentMetadata> fragments = deserializeFragments(serializedFragments);
+
+        FragmentOperation.Append appendOp = new FragmentOperation.Append(fragments);
+
+        ReadOptions readOptions = new ReadOptions.Builder()
+                .setStorageOptions(storageOptions)
+                .build();
+
+        try (Dataset dataset = Dataset.open(datasetUri, readOptions)) {
+            Dataset.commit(
+                    LanceNamespaceHolder.getAllocator(),
+                    datasetUri,
+                    appendOp,
+                    Optional.of(dataset.version()),
+                    storageOptions).close();
+        }
+    }
+
+    private void commitOverwrite(String datasetUri, List<String> serializedFragments, Schema schema, Map<String, String> storageOptions)
+    {
+        log.debug("Committing %d fragments to dataset: %s (overwrite)", serializedFragments.size(), datasetUri);
+        List<FragmentMetadata> fragments = deserializeFragments(serializedFragments);
+
+        FragmentOperation.Overwrite overwriteOp = new FragmentOperation.Overwrite(fragments, schema);
+
+        ReadOptions readOptions = new ReadOptions.Builder()
+                .setStorageOptions(storageOptions)
+                .build();
+
+        try (Dataset dataset = Dataset.open(datasetUri, readOptions)) {
+            Dataset.commit(
+                    LanceNamespaceHolder.getAllocator(),
+                    datasetUri,
+                    overwriteOp,
+                    Optional.of(dataset.version()),
+                    storageOptions).close();
+        }
+    }
+
+    private void createDatasetWithFragments(String datasetUri, List<String> serializedFragments, Schema schema, WriteParams params, Map<String, String> storageOptions)
+    {
+        log.debug("Creating dataset with %d fragments at: %s", serializedFragments.size(), datasetUri);
+        List<FragmentMetadata> fragments = deserializeFragments(serializedFragments);
+
+        Dataset.create(LanceNamespaceHolder.getAllocator(), datasetUri, schema, params).close();
+
+        FragmentOperation.Overwrite overwriteOp = new FragmentOperation.Overwrite(fragments, schema);
+
+        ReadOptions readOptions = new ReadOptions.Builder()
+                .setStorageOptions(storageOptions)
+                .build();
+
+        try (Dataset dataset = Dataset.open(datasetUri, readOptions)) {
+            Dataset.commit(
+                    LanceNamespaceHolder.getAllocator(),
+                    datasetUri,
+                    overwriteOp,
+                    Optional.of(dataset.version()),
+                    storageOptions).close();
+        }
+    }
+
+    // ===== Fragment Serialization (static methods for use by LancePageSink) =====
+
+    public static List<String> serializeFragments(List<FragmentMetadata> fragments)
+    {
+        List<String> result = new ArrayList<>();
+        for (FragmentMetadata fragment : fragments) {
+            result.add(serializeFragment(fragment));
+        }
+        return result;
+    }
+
+    public static String serializeFragment(FragmentMetadata fragment)
+    {
+        try {
+            ByteArrayOutputStream baos = new ByteArrayOutputStream();
+            ObjectOutputStream oos = new ObjectOutputStream(baos);
+            oos.writeObject(fragment);
+            oos.close();
+            return Base64.getEncoder().encodeToString(baos.toByteArray());
+        }
+        catch (IOException e) {
+            throw new RuntimeException("Failed to serialize FragmentMetadata", e);
+        }
+    }
+
+    public static List<FragmentMetadata> deserializeFragments(List<String> serializedFragments)
+    {
+        List<FragmentMetadata> result = new ArrayList<>();
+        for (String serialized : serializedFragments) {
+            result.add(deserializeFragment(serialized));
+        }
+        return result;
+    }
+
+    public static FragmentMetadata deserializeFragment(String serialized)
+    {
+        try {
+            byte[] bytes = Base64.getDecoder().decode(serialized);
+            ByteArrayInputStream bais = new ByteArrayInputStream(bytes);
+            ObjectInputStream ois = new ObjectInputStream(bais);
+            return (FragmentMetadata) ois.readObject();
+        }
+        catch (IOException | ClassNotFoundException e) {
+            throw new RuntimeException("Failed to deserialize FragmentMetadata", e);
+        }
     }
 
     @VisibleForTesting
@@ -395,8 +773,8 @@ public class LanceMetadata
     }
 
     @VisibleForTesting
-    public LanceReader getLanceReader()
+    public LanceNamespaceHolder getNamespaceHolder()
     {
-        return lanceReader;
+        return namespaceHolder;
     }
 }
